--- a/VolunteerHub/VolunteerHub.csproj
+++ b/VolunteerHub/VolunteerHub.csproj
@@ -26,4 +26,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.17" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Interfaces\" />
+    <Folder Include="DI\" />
+  </ItemGroup>
 </Project>
