форма для создания проекта

--- a/VolunteerHub/appsettings.json
+++ b/VolunteerHub/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "MSSQL": "data source={тут сервер};initial catalog=VolunteerDB;trusted_connection=true;TrustServerCertificate=Yes"
+    "MSSQL": "data source=ytin-pc;initial catalog=VolunteerDB;trusted_connection=true;TrustServerCertificate=Yes"
   }
 }
